# fnsd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  docker-compose.example.yml  fnsd.example.toml
.github/workflows/: release.yml
crates/fns-client-headless/: Cargo.toml
crates/fns-client-headless/src/: main.rs
crates/fns-config/: Cargo.toml
crates/fns-config/src/: error.rs  lib.rs  model.rs
crates/fns-core/: Cargo.toml
crates/fns-core/src/: error.rs  hash.rs  lib.rs  path.rs  resource.rs  time.rs
crates/fns-daemon/: Cargo.toml
crates/fns-daemon/src/: daemon.rs  error.rs  lib.rs  watcher.rs
crates/fns-file-transfer/: Cargo.toml
crates/fns-file-transfer/src/: download.rs  error.rs  lib.rs  upload.rs
crates/fns-hash/: Cargo.toml
crates/fns-hash/src/: bytes.rs  lib.rs  path.rs  text.rs
crates/fns-local-store/: Cargo.toml
crates/fns-local-store/src/: error.rs  lib.rs  pending.rs  state.rs  store.rs
crates/fns-protocol/: Cargo.toml
crates/fns-protocol/src/: action.rs  binary.rs  error.rs  file.rs  frame.rs  lib.rs  note.rs  protobuf.rs  session.rs  setting.rs
crates/fns-sync-apply/: Cargo.toml
crates/fns-sync-apply/src/: dispatch.rs  error.rs  file.rs  folder.rs  lib.rs  local.rs  note.rs  outcome.rs  sent.rs  setting.rs
crates/fns-sync-engine/: Cargo.toml
crates/fns-sync-engine/src/: checkpoint.rs  engine.rs  error.rs  event_loop.rs  lib.rs  outgoing.rs  snapshot.rs  transfer.rs
crates/fns-sync-plan/: Cargo.toml
crates/fns-sync-plan/src/: error.rs  lib.rs  operation.rs  request.rs  resource.rs
crates/fns-sync-session/: Cargo.toml
crates/fns-sync-session/src/: error.rs  lib.rs  local_change.rs  session.rs
crates/fns-vault-fs/: Cargo.toml
crates/fns-vault-fs/src/: error.rs  lib.rs  scan.rs  vault.rs
crates/fns-vault-watch/: Cargo.toml
crates/fns-vault-watch/src/: error.rs  event.rs  lib.rs  watcher.rs
crates/fns-ws-client/: Cargo.toml
crates/fns-ws-client/src/: client.rs  error.rs  event.rs  lib.rs
deploy/systemd/: fnsd.service
docs/: crate-architecture.md  crate-plan.md  module-architecture.md
src/: cli.rs  main.rs
src/config/: error.rs  mod.rs  model.rs
src/core/: hash.rs  mod.rs  path.rs  resource.rs  time.rs
src/daemon/: daemon.rs  error.rs  mod.rs  watch_task.rs
src/hash/: bytes.rs  mod.rs  path.rs  text.rs
src/protocol/: action.rs  binary.rs  file.rs  folder.rs  frame.rs  mod.rs  protobuf.rs  response.rs  setting.rs
src/protocol/protobuf/: convert.rs  decode.rs  encode.rs  mod.rs  model.rs
src/store/: database.rs  error.rs  local_store.rs  mod.rs  pending.rs  state.rs  store.rs
src/store/database/: hash.rs  mod.rs  pending.rs  schema.rs  transfer.rs
src/sync/: mod.rs
src/sync/apply/: dispatch.rs  error.rs  file.rs  folder.rs  local.rs  mod.rs  note.rs  outcome.rs  sent.rs  sent_index.rs  setting.rs
src/sync/engine/: checkpoint.rs  engine.rs  error.rs  event_loop.rs  mod.rs  outgoing.rs  snapshot.rs  sync_once.rs  transfer.rs  transfer_queue.rs
src/sync/plan/: error.rs  mod.rs  operation.rs  request.rs
src/sync/session/: echo.rs  error.rs  file_transfer.rs  local_change.rs  mod.rs  pending_watch.rs  session.rs
src/sync/session/local_change/: change.rs  delete.rs  mod.rs  rename.rs
src/sync/transfer/: download.rs  error.rs  mod.rs  upload.rs
src/vault/: mod.rs
src/vault/fs/: error.rs  mod.rs  scan.rs  vault.rs
src/vault/watch/: error.rs  event.rs  mod.rs  watcher.rs
src/ws/: client.rs  error.rs  event.rs  mod.rs
