[workspace]
members = [
    "crates/fns-client-headless",
    "crates/fns-config",
    "crates/fns-core",
    "crates/fns-daemon",
    "crates/fns-file-transfer",
    "crates/fns-hash",
    "crates/fns-local-store",
    "crates/fns-protocol",
    "crates/fns-sync-apply",
    "crates/fns-sync-engine",
    "crates/fns-sync-plan",
    "crates/fns-sync-session",
    "crates/fns-vault-fs",
    "crates/fns-vault-watch",
    "crates/fns-ws-client",
]
resolver = "3"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"
filetime = "0.2"
fns-config = { path = "crates/fns-config" }
fns-core = { path = "crates/fns-core" }
fns-daemon = { path = "crates/fns-daemon" }
fns-file-transfer = { path = "crates/fns-file-transfer" }
fns-hash = { path = "crates/fns-hash" }
fns-local-store = { path = "crates/fns-local-store" }
fns-protocol = { path = "crates/fns-protocol" }
fns-sync-apply = { path = "crates/fns-sync-apply" }
fns-sync-engine = { path = "crates/fns-sync-engine" }
fns-sync-plan = { path = "crates/fns-sync-plan" }
fns-sync-session = { path = "crates/fns-sync-session" }
fns-vault-fs = { path = "crates/fns-vault-fs" }
fns-vault-watch = { path = "crates/fns-vault-watch" }
fns-ws-client = { path = "crates/fns-ws-client" }
futures-util = "0.3"
notify = "8"
prost = "0.14"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
