[package]
name = "fnsd"
version = "0.1.0"
edition = "2024"
description = "Headless Fast Note Sync client for syncing Obsidian vaults."
license = "MIT"
repository = "https://github.com/enximi/fnsd"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"
filetime = "0.2"
futures-util = "0.3"
notify = "8"
prost = "0.14"
regex = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
