[package]
name = "fns-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
fns-config = { workspace = true }
fns-sync-session = { workspace = true }
fns-vault-fs = { workspace = true }
fns-vault-watch = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
